# schoggitrick_FE2025

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  fe_bot.service  requirements.txt
cpp/: .clangd  CMakeLists.txt  Makefile  compile_commands.json
cpp/src/: camera.cpp  cv_test.cpp  drive.cpp  imgproc.cpp  input.cpp  main.cpp  main2.cpp  receiver.cpp  util.h
cpp/tests/: servo.cpp
mark_doing_stuff/: around_barrier.cpp  compute_dist.cpp  compute_dist.h
mark_doing_stuff/.cph/: .compute_dist.cpp_7bc71032d09074becc6750d47b54c632.prob
python/: example.py  servotest.py  test.py
python/debugutils/: common.py  example.py
python/fe/: client.py  debugutils.py  example_server.py  server.py
python/motor/: mindstorms_motor.py
